--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -28,7 +28,7 @@
                 <input type="text" class="form-control data_in_style" datepicker-popup="{{format}}"
                   ng-model="filterDate" is-open="opened" datepicker-options="dateOptions"
                   date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"
-                  ng-change="updateFilters()" />
+                   />
                 <span class="input-group-btn-datePicket ">
                   <button type="button" class="btn btn-default data_in_style" ng-click="open($event)"><i
                       class="fa fa-calendar"></i></button>
@@ -37,8 +37,8 @@
             </div>
           </div>
 
-          <button type="button"
-            ng-click="generateRoute(siteId, JSON.parse(selectedShift.id) , filterDate, JSON.parse(selectedShift.trip_type))"
+          <button type="button" ng-disabled="disableBtn"
+            ng-click="generateRoute(siteId, JSON.parse(selectedShift.id) , filterDate, JSON.parse(selectedShift.trip_type)); submitFilters()"
             class="btn btn-terniary-blue">OK</button>
         </form>
       </div>
