--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -38,7 +38,7 @@
           </div>
 
           <button type="button" ng-disabled="disableBtn"
-            ng-click="generateRoute(siteId, JSON.parse(selectedShift.id) , filterDate, JSON.parse(selectedShift.trip_type)); submitFilters()"
+            ng-click="generateRoute(siteId, JSON.parse(selectedShift.id) , filterDate, JSON.parse(selectedShift.trip_type));"
             class="btn btn-terniary-blue">OK</button>
         </form>
       </div>
@@ -528,7 +528,7 @@
               dnd-allowed-types="list.allowedTypes" dnd-disable-if="list.vehical.length >= 1"
               dnd-dragover="dragoverVehicleCallback(list,index, external, type)"
               dnd-drop="dropVehicleCallback(list,index, item, external, type)">
-              <li ng-repeat="vehical in list.vehical | filter:{ model: vehicleModel }" dnd-draggable="vehical" no-drop
+              <li ng-repeat="vehical in list.vehical | filter : {driverStatus:selected_vehicle_status}" dnd-draggable="vehical" no-drop
                 dnd-effect-allowed="move" dnd-type="vehical.type" dnd-disable-if="vehical.type == 'unknown'"
                 dnd-moved="list.vehical.splice($index, 1)"
                 class="background-{{vehical.type}} input-group employee-list-group-item">
@@ -540,7 +540,7 @@
                 </span>
 
                 <div class="inner-text">
-                  <div class="text-medium"> {{vehical.vehicleNumber}} - <i> ({{selected_vehicle_status.toUpperCase().replace('_',' ')}}) </i></div>
+                  <div class="text-medium"> {{vehical.vehicleNumber}} - <i> ({{vehical.driverStatus.toUpperCase().replace('_',' ')}}) </i></div>
                   <div class="text-big"> {{vehical.vehicleType}} - {{vehical.model}}</div>
                 </div>
 
