--- a/app/views/employees/_form.html.slim
+++ b/app/views/employees/_form.html.slim
@@ -75,7 +75,7 @@
           .col-md-4.col-md-offset-4
             = ui.association :site, label: 'Site', wrapper_html: { class: 'site' }, prompt: false, required: true, prompt: "Choose Site"
           .col-md-4
-            = ui.input :billing_zone, required: false, label: 'Billing Zone', collection: @billing_zones, prompt: "Choose Billing Zone"
+            = ui.association :zone, label: 'Billing Zone', wrapper_html: {class: 'site'}, prompt: "Choose Billing Zone"
       .row[style="margin-bottom:0px"]
         .col-md-6.col-md-offset-4.employee-home-address
           .input-group
