routing search and trip board changes added

--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -540,7 +540,7 @@
                 </span>
 
                 <div class="inner-text">
-                  <div class="text-medium"> {{vehical.vehicleNumber}} - <i> ({{vehical.driverStatus.toUpperCase().replace('_',' ')}}) </i></div>
+                  <div class="text-medium"> {{vehical.vehicleNumber}} - <i> ({{vehical.driverStatus.toUpperCase()}}) </i></div>
                   <div class="text-big"> {{vehical.vehicleType}} - {{vehical.model}}</div>
                 </div>
 
