--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -210,7 +210,7 @@
     <div class="vaayu-modal-content">
       <div class="vaayu-modal-header">
 
-        <span>All Routes</span>
+        <span> Routes - {{modelData.trip_id}}</span>
         <!-- <span style="float: right;">
           <div ng-dropdown-multiselect=""  options="vehicleList" style="display: inline-block;"
           selected-model="SelectedEmp " checkboxes="true" extra-settings="example14settings"
@@ -226,6 +226,7 @@
               <table class="table table-scroll table-bordered  table-condensed">
                 <thead class="pop-table-head">
                   <tr>
+                    <td>Sr</td>
                     <th>Employee</th>
                     <th>ETA</th>
                     <th>Call</th>
@@ -235,6 +236,10 @@
                 <tbody class="pop-table-body">
                   <tr class="" ng-repeat="item in modelData.employees_nodes_addresses track by $index"
                     ng-class="{'panic':item.is_panic}">
+                    <td> 
+                        <input type="checkbox" ng-checked="item.empCheckInStatus=='checked'"
+                          name="route" class="tick" style="height: 15px; width: 15px;">
+                  </td>
                     <td>{{item.empName}}</td>
                     <td>{{item.eta}}</td>
                     <td><button ng-click="panicCallSesion(item.empId,'Employee')"
