--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -540,7 +540,8 @@
                 </span>
 
                 <div class="inner-text">
-                  <div class="text-medium"> {{vehical.vehicleNumber}} - <i> ({{vehical.driverStatus.toUpperCase()}}) </i></div>
+                  <div class="text-medium"> {{vehical.vehicleNumber}} - <i ng-if="vehical.driverStatus"> ({{vehical.driverStatus.toUpperCase()}}) </i>
+                    <i ng-if="!vehical.driverStatus"> ({{selected_vehicle_status.toUpperCase()}}) </i></div>
                   <div class="text-big"> {{vehical.vehicleType}} - {{vehical.model}}</div>
                 </div>
 
