--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -25,6 +25,10 @@
   display: inline-block;
 }
 
+.route-button:hover{
+  color: #fff !important;
+}
+
 .checked-element .tooltiptext,
 .missed-element .tooltiptext{
   visibility: hidden;
