--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -140,7 +140,7 @@
                 <th>Vehicle Required</th>
                 <th>Available Vehicle</th>
                 <th>Result</th>
-                <th>Action</th>
+                <th style="width:220px;">Action</th>
               </tr>
             </thead>
 
@@ -165,33 +165,34 @@
                 <td class="text-color-blue " style="color: #14a89e !important;"><b>{{roster.result}}</b></td>
                 <td>
                   <div class="">
-                    <!-- && !roster.routesGenerated -->
-                    <!-- <button ng-if="roster.result!=='REQUIRED MORE VEHICLE' "
-                    ng-click="generateRoutes(roster)" type="button"
-                    class="btn btn-sm-vaayu btn-terniary-blue btn-block">Generate</button> -->
-
-                    <button ng-if="roster.result!=='REQUIRED MORE VEHICLE' && roster.routesGenerated" type="button"
-                      class="btn btn-sm-vaayu btn-terniary-disable btn-block">Routes Generated</button>
-                    <button
-                      ng-if="roster.result!=='REQUIRED MORE VEHICLE' && !roster.routesGenerated && roster.disableGenerate"
-                      type="button" class="btn btn-sm-vaayu btn-terniary-disable btn-block">Generate</button>
-                    <button
-                      ng-if="roster.result!=='REQUIRED MORE VEHICLE' && !roster.routesGenerated && !roster.disableGenerate"
-                      ng-disabled="disable_roster_button"
-                      ng-click="generateRoutes(roster)" type="button"
-                      class="btn btn-sm-vaayu btn-terniary-blue btn-block">Generate</button>
-
-
-
-
-                    <!-- <button ng-if="roster.result=='REQUIRED MORE VEHICLE'" ng-click="addVehicleToRoster(roster)"
-                      type="button" class="btn btn-sm-vaayu btn-terniary btn-block">Add Vehicle</button> -->
-
-                    <button ng-if="roster.result=='REQUIRED MORE VEHICLE' && !roster.disableGenerate"
+                   
+                    <button ng-if="!roster.routesGenerated && !roster.disableGenerate && (roster.generateButtonLabel=='generate' || roster.generateButtonLabel =='regenerate')"
                       ng-click="addVehicleToRoster(roster)" type="button"
-                      class="btn btn-sm-vaayu btn-terniary btn-block">Add Vehicle</button>
-                    <button ng-if="roster.result=='REQUIRED MORE VEHICLE' && roster.disableGenerate" type="button"
-                      class="btn btn-sm-vaayu btn-terniary-disable btn-block">Add Vehicle</button>
+                      class="btn btn-sm-vaayu btn-terniary btn-sm pull-left route-button">Add Vehicle</button>
+
+                    <button ng-if="!roster.routesGenerated && roster.disableGenerate || roster.routesGenerated" type="button"
+                      class="btn btn-sm-vaayu btn-terniary-disable btn-sm pull-left route-button">Add Vehicle</button>
+
+                    <button ng-if="roster.routesGenerated" type="button" class="btn btn-sm-vaayu btn-terniary-disable btn-sm">
+                      Routes Finalized
+                    </button>
+                    <button ng-if="!roster.routesGenerated && roster.disableGenerate" type="button" class="btn btn-sm-vaayu btn-terniary-disable btn-sm route-button" style="width:46%;">
+                      Generate
+                    </button>
+                    <button
+                      ng-if="!roster.routesGenerated && !roster.disableGenerate && roster.generateButtonLabel=='generate'"
+                      ng-click="generateRoutes(roster)" type="button"
+                      class="btn btn-sm-vaayu btn-terniary-blue btn-sm" style="width:46%;">
+                      Generate
+                    </button>
+
+                     <button
+                      ng-if="!roster.routesGenerated && !roster.disableGenerate && roster.generateButtonLabel =='regenerate'"
+                      ng-click="generateRoutes(roster)" type="button"
+                      class="btn btn-sm-vaayu btn-sm pull-right" style="color:#fff;background:#65b9da;">
+                      Re-Generate
+                    </button>
+
                   </div>
                 </td>
               </tr>
