--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -226,7 +226,7 @@
               <table class="table table-scroll table-bordered  table-condensed">
                 <thead class="pop-table-head">
                   <tr>
-                    <td>Sr</td>
+                    <td>Check In</td>
                     <th>Employee</th>
                     <th>ETA</th>
                     <th>Call</th>
