get lat lng by id api call change

--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -56,7 +56,7 @@
             <button ng-click="addCustomeRoute()" type="button" class="btn btn-terniary fa-search-custom"
               style="float: right; background-color: #384266;">ADD CUSTOM ROUTE</button>
               <button ng-click="showUploadWindow()" type="button" class="btn btn-terniary fa-search-custom"
-              style="float: right; background-color: #384266;margin-right:10px;">Upload</button>
+              style="float: right; background-color: #384266;margin-right:10px;">UPLOAD</button>
           </div>
         </div>
 
