--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -186,7 +186,7 @@
                   <td>{{roster.current_status}}</td>
                   <td>
                     <div class="">
-                      <button type="button" id="myBtn" ng-click="showModal(roster)"
+                      <button type="button" id="myBtn" ng-click="showModal(roster, roster.current_status)"
                         class="btn btn-sm-vaayu btn-terniary-blue btn-block">View</button>
                     </div>
                   </td>
