changes in roster and options in constraints

--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -53,10 +53,10 @@
       <div class="col-md-4">
         <div class="btn-toolbar float-right" role="toolbar">
           <div class="">
-            <button ng-click="addCustomeRoute()" type="button" class="btn btn-terniary fa-search-custom"
-              style="float: right; background-color: #384266;">ADD CUSTOM ROUTE</button>
+            <!-- <button ng-click="addCustomeRoute()" type="button" class="btn btn-terniary fa-search-custom"
+              style="float: right; background-color: #384266;">ADD CUSTOM ROUTE</button> -->
               <button ng-click="showUploadWindow()" type="button" class="btn btn-terniary fa-search-custom"
-              style="float: right; background-color: #384266;margin-right:10px;">UPLOAD</button>
+              style="float: right; background-color: #384266;margin-right:10px;">UPLOAD SCHEDULE</button>
           </div>
         </div>
 
