--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -45,14 +45,14 @@
 
       <div class="col-md-3">
 
-        <div class="btn-toolbar float-right" role="toolbar">
-          <div class="btn-group" role="group">
+        <div class="btn-toolbar float-right pad-8" role="toolbar">
+          <!-- <div class="btn-group" role="group">
             <button type="button" ng-click="finalizeRoutes()" class="btn btn-terniary-blue">Finalize</button>
           </div>
           <div class="btn-group" role="group">
             <button type="button" class="btn btn-terniary">Export CSV</button>
-          </div>
-          <div class="btn-group" role="group">
+          </div> -->
+          <div class="btn-group" role="group" style="float: right;">
             <button type="button" ng-click="showFilterSidebar()" class="btn btn-terniary-blue">Filter</button>
           </div>
         </div>
