--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -73,7 +73,7 @@
           </form>
         </div>
 
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <div class="btn-toolbar float-right" role="toolbar">
             <div class="btn-group" role="group">
               <button type="button" class="btn btn-terniary">Export CSV</button>
@@ -82,7 +82,7 @@
               <button type="button" ng-click="showFilterSidebar()" class="btn btn-terniary-blue">Filter</button>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
 
       <div class="analytic-panel">
