--- a/app/views/employee_trips/_modal_schedule.html.slim
+++ b/app/views/employee_trips/_modal_schedule.html.slim
@@ -54,14 +54,14 @@
                                   = ui.input :schedule_date, as: 'hidden', input_html: { class: "selected_date" }
                                   = ui.input :check_in, as: 'hidden', input_html: {:'data-mask' => 'time', :value => sch.first.check_in_formatted}
                                   = ui.input :site_id, as: 'hidden', input_html: { class: "check_in_location_select" }
-                                  = ui.input :shift_id, collection: @employee.shifts.active.map {|x| [x.start_time, x.id]}, label: "Pick", input_html: { class: "check_in_shift_select" }, prompt: "Clear"
+                                  = ui.input :shift_id, collection: @employee.shifts.active.map {|x| [x.start_time, x.id,{'label'=> x.start_time + "- #{x.working_day=='Weekday' ? 'WK': 'WD' }" }]}, label: "Pick", input_html: { class: "check_in_shift_select" }, prompt: "Clear"
                                   = ui.input :is_leave, collection: ['Yes','No'], label: "On Leave", input_html: { class: "check_in_leave_select" }
                                 = f.simple_fields_for "check_out_attributes[#{i}]", sch.last do |ui|
                                   = ui.input :id, :as => 'hidden'
                                   = ui.input :employee_id, :as => 'hidden', :value => @employee.id, input_html: { class: "check_in_employee_select" }
                                   = ui.input :schedule_date, :as => 'hidden', input_html: { class: "selected_date" }
                                   = ui.input :check_out, as: 'hidden', input_html: {:'data-mask' => 'time', :value => sch.last.check_out_formatted }
-                                  = ui.input :shift_id, collection: @employee.shifts.active.map {|x| [x.end_time, x.id]}, label: "Drop", input_html: { class: "check_out_shift_select" }, prompt: "Clear"
+                                  = ui.input :shift_id, collection: @employee.shifts.active.map {|x| [x.end_time, x.id,{'label'=> x.end_time + "- #{x.working_day=='Weekday' ? 'WK': 'WD' }" }]}, label: "Drop", input_html: { class: "check_out_shift_select" }, prompt: "Clear"
                                   = ui.input :site_id, collection: @sites, label: "Location", input_html: { class: "check_out_location_select" }
         .modal-footer
           button.btn.btn-sm.btn-default[type="button" data-dismiss="modal"]
