--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -384,7 +384,7 @@
                 </div>
               </div>
             </div>
-            <div class="row">
+            <div class="row hide_driver_field">
               <div class="col-md-6">
                 <div class="form-group">
                   <select id="disabledSelect" class="form-control" placeholder="Shift Time">
@@ -409,14 +409,14 @@
           <div class="vaayu-sidebar-body form-group" set-height style="overflow-y: auto">
 
 
-            <div class="row form-group">
+            <div class="row form-group hide_driver_field">
               <div class="col-md-6">
                 <span class="driver-List-post-filter">
                   Guard list post filter
                 </span>
               </div>
               <div class="col-md-6 text-right">
-                <a ng-click="reset()" class="clear-filter">Clear filter</a>
+                <a ng-click="reset()" class="clear-filter hide_driver_field">Clear filter</a>
               </div>
             </div>
 
@@ -520,7 +520,7 @@
                   Driver list post filter
                 </span>
               </div>
-              <div class="col-md-6 text-right">
+              <div class="col-md-6 text-right hide_driver_field">
                 <a ng-click="reset()" class="clear-filter">Clear filter</a>
               </div>
             </div>
