contract list all static urls removed

--- a/app/views/configurators/angular_views/_contracts.html
+++ b/app/views/configurators/angular_views/_contracts.html
@@ -90,7 +90,7 @@
             </ul>
         </div>
         <div class="tab-content">
-            <toaster-container ng-show="toggleView"></toaster-container>
+            <toaster-container ></toaster-container>
             <div id="CUSTOMER" class="tab-pane fade  " ng-class="{'in active show':isSet('CUSTOMER')}">
                 <div class="tab-content-area ">
                     <div class="card-header cut_title">
