loader added on downloadExcel sample request and constraint form sumbmit set to work

--- a/app/views/configurators/angular_views/_constraint.html
+++ b/app/views/configurators/angular_views/_constraint.html
@@ -124,8 +124,8 @@
 
                             </div>
                             <div class="col-md-12">
-                                <button type="button" class="btn btn-primary main-submit-btn"
-                                    ng-click="submitForm(form.$valid)">Submit</button>
+                                <button type="submit" class="btn btn-primary main-submit-btn"
+                                    >Submit</button>
 
                             </div>
                         </div>
