--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -953,4 +953,40 @@
     position: relative;
     top: 23px;}
 
+    .loader-wrapper {
+      position: fixed;
+      left:0;
+      top:0;
+      right:0;
+      bottom: 0;
+      z-index: 9999999999;
+      width:100%;
+      height: 100%;
+      background:rgba(0,0,0,0.2);
+    }
 
+    .toast-top-right{
+      display: block !important;
+    }
+
+    .ng-loader {
+      position: fixed;
+      left:50%;
+      top:50%;
+      z-index: 9999999999;
+      border:16px solid #f3f3f3;
+      border-top:16px solid #3498db;
+      border-radius:50%;
+      width:65px;
+      height: 65px;
+      animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
