Added area on employee list in route

--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -209,8 +209,8 @@
                                 </div>
                               </span>
 
-                              <div class="inner-text">
-                                {{item.empName}}
+                              <div class="inner-text" title="{{item.empName}} ({{item.area}})">
+                                {{item.empName}} <div class="text-muted">({{item.area}})</div>
                               </div>
 
                               <div class="input-group-addon addon-append">
