--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -350,8 +350,8 @@
   width: 142px;
   float:left;
   align-items: center;
-  display: flex;
-  flex: 1;
+  /* display: flex; */
+  /* flex: 1; */
 }
 
 .vayau-routing .employee-cluster-panel .employee-list-group-item .inner-addon {
