added setup shedule yesterday date enbale by Ekta

--- a/app/views/provisioning/_employees.html.slim
+++ b/app/views/provisioning/_employees.html.slim
@@ -132,7 +132,7 @@ javascript:
         //let optionObject =  $(this);
         //$(this).element.disabled = true;
 
-        document.getElementById(elementId).options[index].disabled = true;
+        //document.getElementById(elementId).options[index].disabled = true;
       }
    
    }
@@ -160,7 +160,7 @@ javascript:
 
     if( new Date(currentFinalshiftTime) < new Date( currentTimeDate ) )
      {
-        document.getElementById(elementId).options[index].disabled = true;
+        //document.getElementById(elementId).options[index].disabled = true;
       }
    
    }
