--- a/app/views/employee_trips/schedule_trip.js.slim
+++ b/app/views/employee_trips/schedule_trip.js.slim
@@ -67,7 +67,10 @@
 | $(".schedule-content").on("click", function(){
     disable_lapsed_shifts();
 |   selectedDate = $(this).closest(".schedule-column").find(".selected_date:first").val();
-|   if (selectedDate >= dateFormatter(new Date(), "YYYY-MM-DD")){
+|    var dateToCompare = new Date();
+|     dateToCompare.setDate( dateToCompare.getDate() - 1 );
+
+|   if (selectedDate >= dateFormatter(dateToCompare, "YYYY-MM-DD")){
 |     removeScheduleHighlight();
 |     $(this).hide();
 |     $(this).next().show();
