--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -210,7 +210,7 @@
     <div class="vaayu-modal-content">
       <div class="vaayu-modal-header">
 
-        <span> Route - {{modelData.route_id}}</span>
+        <span> Route - {{modelData.trip_id}}</span>
         <!-- <span style="float: right;">
           <div ng-dropdown-multiselect=""  options="vehicleList" style="display: inline-block;"
           selected-model="SelectedEmp " checkboxes="true" extra-settings="example14settings"
@@ -231,6 +231,7 @@
                     <th>ETA</th>
                     <th>Call</th>
                     <th>Emergency</th>
+                    <th>Panic Type</th>
                   </tr>
                 </thead>
                 <tbody class="pop-table-body">
@@ -277,6 +278,7 @@
                         </form>
                       </div> -->
                     </td>
+                    <td>{{item.exception_type}}</td>
                   </tr>
                 </tbody>
               </table>
